--- a/style.css
+++ b/style.css
@@ -11,9 +11,6 @@ body {
   font-family: 'Roboto', 'Outfit', sans-serif;
 }
 
-.section {
-  width: 80vw;
-}
 .hero {
   position: relative;
   height: 200%;
@@ -106,7 +103,7 @@ nav .nav__menu {
 }
 .hero__content {
   position: relative;
-  margin: 0 auto;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -183,12 +180,12 @@ nav .nav__menu {
 
 /**********************showcase*********/
 .showcase .container {
-  margin: 1rem auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 80vw;
+  width: 90vw;
 
   max-width: 1600px;
 }
@@ -247,7 +244,7 @@ nav .nav__menu {
 }
 /*************Making-section***************/
 .making-section .container {
-  margin: 3rem auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -474,7 +471,7 @@ nav .nav__menu {
   align-items: center;
   text-align: center;
   max-width: 500px;
-  width: 90vw;
+  width: 80vw;
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0px 0px 28px 2px rgba(217, 217, 217, 1);
@@ -793,6 +790,7 @@ nav .nav__menu {
   .hero__content__left .hero__content__left-text {
     width: 20vw;
     height: 140%;
+    transform: translate(-27px, 1px);
   }
   .hero__content__left .hero__content__left-text .hero-title {
     font-size: 12rem;
@@ -902,9 +900,13 @@ nav .nav__menu {
     margin-left: 3rem;
   }
   .showcase .container {
-    display: block;
-    height: 180vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 150vh;
     overflow: hidden;
+    width: 90vw;
   }
 
   .showcase .container .box {
@@ -913,22 +915,18 @@ nav .nav__menu {
 
   .showcase .box .circle-c,
   .showcase .box .circle2-c {
-    height: 460px;
-    width: 460px;
+    height: 360px;
+    width: 360px;
   }
-  .showcase .level1 .box {
-    top: 180%;
-    transform: translateY(5%);
+  .showcase .level1 {
+    transform: translate(3.8rem, -19.5rem);
   }
-  .showcase .level2 .box {
-    top: 240%;
-    left: 10%;
-    transform: translate(0%, 3%);
+  .showcase .level2 {
+    transform: translate(-7.5rem, 0rem);
   }
-  .showcase .level3 .box {
-    top: 245%;
-    right: 12%;
-    transform: translate(-1%, 1%);
+
+  .showcase .level3 {
+    transform: translate(15rem, 0rem);
   }
 
   .showcase .container .level1 .text-box,
@@ -940,20 +938,14 @@ nav .nav__menu {
     margin-bottom: 0;
   }
   .showcase .container .level1 .text-box {
-    top: 195%;
-    right: 0%;
-    transform: translate(-10%, -10%);
+    transform: translate(14rem, -5rem);
   }
   .showcase .container .level2 .text-box {
-    top: 236%;
-    right: 64%;
-    transform: translate(-10%, -10%);
+    transform: translate(-10rem, -7rem);
   }
 
   .showcase .container .level3 .text-box {
-    top: 330%;
-    right: 25%;
-    transform: translate(-10%, -10%);
+    transform: translate(-7rem, 18rem);
   }
 }
 
@@ -968,6 +960,11 @@ nav .nav__menu {
     top: -3rem;
   }
 
+  .hero__content__left .hero__content__left-text {
+    width: 20vw;
+    height: 140%;
+    transform: translate(-76px, -46px);
+  }
   .hero__content__right .hero__content__right-top {
     width: 600px;
   }
@@ -982,6 +979,46 @@ nav .nav__menu {
   .hero__content__right .hero__content__right-bottom p {
     left: -2rem;
   }
+  .showcase .container {
+    height: 175vh;
+  }
+  .showcase .box .circle-c,
+  .showcase .box .circle2-c {
+    height: 460px;
+    width: 460px;
+  }
+
+  .showcase .level1 {
+    transform: translate(0rem, -19rem);
+  }
+  .showcase .level2 {
+    transform: translate(-14rem, 5.8rem);
+  }
+  .showcase .level3 {
+    transform: translate(14.6rem, 5.5rem);
+  }
+
+  .showcase .container .level1 .text-box {
+    transform: translate(25rem, 0rem);
+  }
+  .showcase .container .level2 .text-box {
+    transform: translate(-9rem, -15rem);
+  }
+
+  .showcase .container .level3 .text-box {
+    transform: translate(-7rem, 18rem);
+  }
+
+  .showcase .box .circle-c img,
+  .showcase .box img {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    height: 360px;
+  }
+
   .making-section .container {
     display: flex;
     flex-direction: row;
