--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .hero {
   position: relative;
-  height: 200%;
+  width: 100%;
 }
 .navigation {
   max-width: 1600px;
@@ -32,7 +32,7 @@ nav {
   margin: 1rem 0;
 }
 .logo {
-  margin: 1rem;
+  margin: 1rem 0;
 }
 
 .logo h1 a {
@@ -47,7 +47,7 @@ nav .nav__menu {
   flex-direction: column;
   gap: 2rem;
   align-items: center;
-  margin: 1rem 0;
+  margin: 2rem 0rem;
 }
 .nav__checkbox {
   display: none;
@@ -141,11 +141,11 @@ nav .nav__menu {
 }
 
 .hero__content__right .hero__content__right-top img {
-  width: 270px;
+  width: 250px;
   margin-bottom: 1rem;
 }
 .hero__content__right-bottom {
-  width: 270px;
+  width: 250px;
   margin: 0 auto;
   font-size: 1rem;
   color: #676767;
@@ -189,7 +189,8 @@ nav .nav__menu {
 
   max-width: 1600px;
 }
-
+.showcase .box {
+}
 .showcase .box .circle-c {
   overflow: hidden;
   position: absolute;
@@ -211,7 +212,6 @@ nav .nav__menu {
   z-index: 2;
 
   border-radius: 50%;
-  transform: rotate(-6deg);
 }
 .showcase .border1 {
   border-left: 8px solid transparent;
@@ -315,9 +315,9 @@ nav .nav__menu {
 
 .box {
   position: relative;
-  width: 260px;
+  width: 240px;
   height: 340px;
-  margin: 2rem auto;
+  margin: 1rem auto;
 }
 
 .box::before {
@@ -325,13 +325,13 @@ nav .nav__menu {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 260px;
-  height: 260px;
+  width: 240px;
+  height: 240px;
   background-color: transparent;
   border-radius: 50%;
   z-index: 1;
 
-  box-shadow: 0 30px 0 20px #fff;
+  box-shadow: 0 30px 0 10px #fff;
 }
 
 .box .circle {
@@ -339,8 +339,8 @@ nav .nav__menu {
   position: absolute;
   bottom: 0;
   left: 0;
-  height: 260px;
-  width: 260px;
+  height: 240px;
+  width: 240px;
   border-radius: 50%;
   border: 1px solid #d2c6bf;
 }
@@ -348,8 +348,8 @@ nav .nav__menu {
   left: 0;
   bottom: 0;
   position: absolute;
-  height: 260px;
-  width: 260px;
+  height: 240px;
+  width: 240px;
   z-index: 2;
   border-left: solid black 8px;
   border-top: 8px solid transparent;
@@ -653,7 +653,7 @@ nav .nav__menu {
 
 .footer .container .column-1 {
   margin-bottom: 2rem;
-  padding: 0 2rem;
+  padding: 0 1rem;
 }
 .social-links a {
   color: white;
@@ -758,13 +758,13 @@ nav .nav__menu {
 
 @media screen and (min-width: 960px) {
   .navigation {
-    width: 90vw;
+    width: 90%;
     max-width: 1600px;
     margin: 1rem auto;
   }
 
   .container {
-    max-width: 1280px;
+    max-width: 1250px;
   }
   .logo {
     margin: 1rem 0;
@@ -796,8 +796,7 @@ nav .nav__menu {
     font-size: 12rem;
     transform: rotate(-90deg);
   }
-  .hero__content__left-img {
-  }
+
   .hero__content__left-img img {
     width: 200px;
   }
@@ -969,12 +968,11 @@ nav .nav__menu {
     width: 600px;
   }
   .hero__content__right .hero__content__right-top img {
-    width: 100%;
+    width: 585px;
   }
   .hero__content__right .hero__content__right-bottom {
     max-width: 300px;
-    margin-top: 2rem;
-    margin-left: 7rem;
+    transform: translateX(-3rem);
   }
   .hero__content__right .hero__content__right-bottom p {
     left: -2rem;
