--- a/style.css
+++ b/style.css
@@ -417,7 +417,7 @@ nav .nav__menu {
   display: flex;
   width: 90vw;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   max-width: 1600px;
 }
@@ -513,7 +513,7 @@ nav .nav__menu {
   display: flex;
   width: 90vw;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   max-width: 1600px;
 }
@@ -538,11 +538,10 @@ nav .nav__menu {
   align-items: center;
 }
 
-.discover-section .grid-2,
 .discover-section .grid-1 {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   margin: 1rem auto;
 }
 
@@ -1324,7 +1323,7 @@ nav .nav__menu {
   .making-section .container {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
   }
   .making-section .grid-1 .making-content,
@@ -1332,11 +1331,13 @@ nav .nav__menu {
   .discover-section .grid-1 .discover-content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     text-align: left;
+    padding-left: 2rem;
   }
-  .discover-section .text {
+  .discover-section .text,
+  .discover-title {
     text-align: left;
   }
   .making-section .grid-1 .makeover {
@@ -1358,13 +1359,13 @@ nav .nav__menu {
   .making-section .container .grid-2 .ingredient {
     width: 50%;
   }
+
   .chef-section .container,
   .discover-section .container {
     flex-direction: row;
   }
-  .chef-section .grid-1,
+
   .chef-section .grid-2,
-  .discover-section .grid-2,
   .discover-section .grid-1 {
     width: 50%;
   }
@@ -1375,7 +1376,7 @@ nav .nav__menu {
   .contact-section h3,
   .aboutus-title,
   .making-section .making-title {
-    font-size: 3.6rem;
+    font-size: 3rem;
   }
 
   .overpic1 {
