--- a/style.css
+++ b/style.css
@@ -1021,7 +1021,7 @@ nav .nav__menu {
   }
   .contact-section .container {
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     text-align: left;
   }
@@ -1033,6 +1033,9 @@ nav .nav__menu {
   }
   .footer .container {
     flex-direction: row;
+    width: 90vw;
+    margin: 8rem;
+    margin-bottom: 4rem;
   }
   .footer .column-2 {
     display: flex;
